<resources>
    <string name="app_name">JMR</string>
    <string name="recommendations_fragment_text">Will generate recommendation from: Malmö, still, 12:00</string>
    <string name="settings_fragment_text">Choose which context parameters to recommend from:</string>
    <string name="button_recommend">Generate Recommendation</string>
    <string name="switch_time">Time</string>
    <string name="switch_location">Location</string>
    <string name="switch_activity">Activity</string>
    <string name="toolbar_genres">Genres</string>
    <string name="toolbar_settings">Settings</string>
    <string name="toolbar_recommendations">Recommendations</string>
    <string name="toolbar_history">History</string>
    <string name="chosen_genre">Chosen genre: %s</string>
    <string name="current_activity">Current activity: %s</string>
    <string name="current_location">Current location: %s</string>
    <string name="current_time">Current time: %s</string>
    <string name="settings">Settings</string>
    <string name="history">history</string>
    <string name="home">home</string>
    <string name="genres">genres</string>
    <string name="tracks">Tracks</string>
    <string name="from_what_i_usually_listen_to">From tracks connected to context</string>
    <string name="how_would_you_like_to_be_recommended">How would you like to be recommended?</string>
    <string name="from_my_chosen_genre">From my chosen Genre</string>
    <string name="found_with_current_context">Found %d with current context</string>
    <string name="about">About</string>
    <string name="how_this_app_works">How this app works:</string>
    <string name="choose_a_genre">Choose a genre</string>
    <string name="this_application_is_part_of_a_thesis_work_by_victor_marante_and_simon_m_nsson">This Application is part of a thesis work by Victor Marante and Simon Månsson. \nPlease fill out the form below after using the application for two weeks. </string>
    <string name="survey_link">https://goo.gl/forms/lfHWGwZGcba43Yok1</string>
    <string name="instructions">1. Select a genre and press the generate recommendation button, this will fetch a number of song from Spotify and then queue them on your account. You may review the list in the history tab. These tracks will be stored with information about your current context.  \n2. With tracks stored in the app you will have the option of getting a recommendation based on the tracks that you\'ve listend to previously in a similar context \n3. In the settings tab you may select if activity, location or time should be a part of recommendations. \nNo information about your context leaves the application.  Activity may be one of the following: in vehicle, on bicycle, on foot, walking, running or still.  Location is represented by gps coordinates.  Time is represented as whole hours.</string>

</resources>
