<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:accessibilityLiveRegion="polite"
    tools:context=".ui.settings.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/start_padding"
        android:paddingEnd="4dp">

        <TextView
            android:id="@+id/history_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_fragment_text"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>

        <Switch
            android:id="@+id/switch_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:checked="true"
            android:text="@string/switch_activity"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

        <Switch
            android:id="@+id/switch_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:checked="true"
            android:text="@string/switch_location"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

        <Switch
            android:id="@+id/switch_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:checked="true"
            android:text="@string/switch_time"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

    </LinearLayout>

</androidx.constraintlayout.ConstraintLayout>