<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recommendations"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.recommendations.RecommendationsFragment">


    <android.support.design.card.MaterialCardView
        style="@style/Widget.MaterialComponents.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="8dp"
        android:minHeight="100dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button_recommend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="128dp"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:paddingTop="4dp"
            app:layout_constraintBottom_toTopOf="@+id/button_recommend"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/recommendations_chosen_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chosen_genre"
                android:textSize="20sp"
                tools:text="GENRE" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/recommendations_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/current_activity"
                android:textSize="20sp"
                tools:text="activity" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/recommendations_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/current_location"
                android:textSize="20sp"
                tools:text="location" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/recommendations_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/current_time"
                android:textSize="20sp"
                tools:text="time" />
        </LinearLayout>

    </android.support.design.card.MaterialCardView>

    <android.support.design.button.MaterialButton
        android:id="@+id/button_recommend"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:text="@string/button_recommend"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
